# JSSP_solver

./: .gitignore  Algorithm.h  AlgorithmManager.cpp  AlgorithmManager.h  CMakeLists.txt  FunctionFactory.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h  InstanceHandler.h  Logger.h  OrtoolsAlgorithm.cpp  OrtoolsAlgorithm.h  Structs.h  conanfile.txt  instance_data.txt  main.cpp  run_benchmark.py
include/: jssp.h  ts.cpp
